--- a/output.css
+++ b/output.css
@@ -582,6 +582,14 @@ video {
   margin-top: 0.5rem;
 }
 
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
 .flex {
   display: flex;
 }
@@ -600,6 +608,10 @@ video {
 
 .h-40 {
   height: 10rem;
+}
+
+.h-2 {
+  height: 0.5rem;
 }
 
 .w-3\/6 {
@@ -809,6 +821,16 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .font-bold {
